[gd_scene load_steps=26 format=3 uid="uid://drfnne271u6gq"]

[ext_resource type="Script" uid="uid://bia83w547m3pn" path="res://src/player/player.gd" id="1_mf2ua"]
[ext_resource type="Texture2D" uid="uid://bw6xltcnqcctm" path="res://assets/misc/dropshadow.png" id="2_244u8"]
[ext_resource type="Texture2D" uid="uid://cvty8dvudga5b" path="res://assets/sprites/player/player_run.png" id="2_jiejy"]
[ext_resource type="Script" uid="uid://mbnevxon4evl" path="res://src/player/animation.gd" id="2_x42xx"]
[ext_resource type="Texture2D" uid="uid://p234drbehle4" path="res://assets/misc/spark.png" id="3_5f2sf"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://be1l4g1j70sus" path="res://src/player/animationstatemachine.tres" id="3_l271a"]
[ext_resource type="Script" uid="uid://t3faic736ur7" path="res://src/player/melee.gd" id="4_244u8"]
[ext_resource type="SpriteFrames" uid="uid://c0fwi7aefxvgp" path="res://src/player/spriteframes.tres" id="4_l271a"]
[ext_resource type="Script" uid="uid://mn78wiaw5mw" path="res://src/weapons/melee_hitbox.gd" id="5_5f2sf"]
[ext_resource type="Script" uid="uid://dp8rcslrax18g" path="res://src/rewind/rewind_component.gd" id="5_8ydov"]

[sub_resource type="Animation" id="Animation_6bm8s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation:squish_vertical")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_8ydov"]
resource_name = "crouch"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(8, 0)]
}

[sub_resource type="Animation" id="Animation_hrerp"]
resource_name = "default"
length = 0.001

[sub_resource type="Animation" id="Animation_hja65"]
resource_name = "fall"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_vwsmr"]
resource_name = "land"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(8, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation:squish_vertical")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.43968, -0.05, 0, 0.05, 0, 1, -0.05, 0, 0.05, 0),
"times": PackedFloat32Array(0, 0.1)
}

[sub_resource type="Animation" id="Animation_jcdrv"]
resource_name = "rise"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 0)]
}

[sub_resource type="Animation" id="Animation_oyld2"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_l271a"]
resource_name = "skid"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwsmr"]
_data = {
&"RESET": SubResource("Animation_6bm8s"),
&"crouch": SubResource("Animation_8ydov"),
&"default": SubResource("Animation_hrerp"),
&"fall": SubResource("Animation_hja65"),
&"land": SubResource("Animation_vwsmr"),
&"rise": SubResource("Animation_jcdrv"),
&"run": SubResource("Animation_oyld2"),
&"skid": SubResource("Animation_l271a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnvp7"]
size = Vector2(41, 86)

[sub_resource type="Curve" id="Curve_kd5mi"]
_data = [Vector2(0, 0.895161), 0.0, 0.0, 0, 0, Vector2(0.846914, 0.531309), -1.39573, -1.39573, 0, 0, Vector2(0.99999, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_jiejy"]
resource_name = "MediumCombo"
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Melee")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"next_attack"
}, {
"args": [],
"method": &"next_attack"
}, {
"args": [],
"method": &"next_attack"
}, {
"args": [],
"method": &"end_attack"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Melee/MeleeAttackPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(71.3333, -0.666667), Vector2(64.6667, 22.6667), Vector2(52, 9.33333)]
}

[sub_resource type="Animation" id="Animation_244u8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Melee/MeleeAttackPos:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o822w"]
_data = {
&"MediumCombo": SubResource("Animation_jiejy"),
&"RESET": SubResource("Animation_244u8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_244u8"]
size = Vector2(52, 50)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_mf2ua")

[node name="Animation" type="Node" parent="."]
script = ExtResource("2_x42xx")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource("3_l271a")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
&"": SubResource("AnimationLibrary_vwsmr")
}

[node name="SpriteScale" type="Node2D" parent="."]
position = Vector2(0, 47)
scale = Vector2(0.1, 0.1)

[node name="Sprite" type="Sprite2D" parent="SpriteScale"]
position = Vector2(0, -470)
texture = ExtResource("2_jiejy")
flip_h = true
hframes = 9

[node name="RewindComponent" type="Node" parent="SpriteScale/Sprite"]
script = ExtResource("5_8ydov")

[node name="Player" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("4_l271a")
animation = &"run"
frame_progress = 0.718393
metadata/_edit_lock_ = true

[node name="Dropshadow" type="Sprite2D" parent="Player"]
texture = ExtResource("2_244u8")
flip_h = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_lnvp7")
metadata/_edit_lock_ = true

[node name="SkidParticles" type="CPUParticles2D" parent="."]
position = Vector2(9.33333, 50.6667)
emitting = false
amount = 10
lifetime = 0.84
emission_shape = 1
emission_sphere_radius = 19.12
direction = Vector2(1, -0.2)
spread = 27.25
gravity = Vector2(0, 0)
initial_velocity_min = 150.23
initial_velocity_max = 150.23
scale_amount_max = 15.08
scale_amount_curve = SubResource("Curve_kd5mi")
metadata/_edit_lock_ = true

[node name="Slash" type="Sprite2D" parent="."]
visible = false
position = Vector2(58, 16)
texture = ExtResource("3_5f2sf")

[node name="Melee" type="Node2D" parent="."]
script = ExtResource("4_244u8")
metadata/_edit_lock_ = true

[node name="MeleeAnims" type="AnimationPlayer" parent="Melee"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_o822w")
}

[node name="MeleeAttackPos" type="Marker2D" parent="Melee"]

[node name="Sprite2D" type="Sprite2D" parent="Melee"]
visible = false
texture = ExtResource("3_5f2sf")

[node name="MeleeHitbox" type="Area2D" parent="Melee/Sprite2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("5_5f2sf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee/Sprite2D/MeleeHitbox"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_244u8")

[connection signal="attack_ended" from="Melee" to="." method="_on_melee_attack_ended"]
[connection signal="animation_finished" from="Melee/MeleeAnims" to="Melee" method="_on_melee_anims_animation_finished"]
